"UC2 ability to add new contact to addessBook "